--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="container">
-        <p class="logo" id="top"><span class="active">Web</span> Studio</p>
+        <p class="logo" id="top"><span class="active">Web</span>Studio</p>
         <nav class="navigation">
           <ul class="nav-list">
             <li class="nav-item active">
@@ -102,12 +102,12 @@
           </ul>
         </div>
       </section>
-      <!-- We do -->
-      <section class="we-do">
+      <!-- Wedo -->
+      <section class="wedoit">
         <div class="container">
           <h2 class="title">Чем мы занимаемся</h2>
-          <ul class="we-do-list">
-            <li class="we-do-item">
+          <ul class="wedoit-list">
+            <li class="wedoit-item">
               <a class="item-link" href="">
                 <div class="item-image">
                   <img src="./images/img011.jpg" alt="Изображение ноутбука" />
@@ -115,7 +115,7 @@
                 <h3 class="item-title">Десктопные приложения</h3>
               </a>
             </li>
-            <li class="we-do-item">
+            <li class="wedoit-item">
               <a class="item-link" href="">
                 <div class="item-image">
                   <img src="./images/img012.jpg" alt="Изображение телефона" />
@@ -123,7 +123,7 @@
                 <h3 class="item-title">Мобильные приложения</h3>
               </a>
             </li>
-            <li class="we-do-item">
+            <li class="wedoit-item">
               <a class="item-link" href="">
                 <div class="item-image">
                   <img src="./images/img013.jpg" alt="Изображение монитора" />
@@ -296,7 +296,7 @@
     <footer>
       <div class="container">
         <div>
-          <a class="logo" href=""><span class="active">Web</span> Studio</a>
+          <a class="logo" href=""><span class="active">Web</span>Studio</a>
           <address class="address">
             <ul class="address-list">
               <li class="address-item">г. Киев, пр-т Леси Украинки, 26</li>
@@ -334,10 +334,6 @@
         </div>
         <div class="join-form">
           <p class="join">Подпишитесь на рассылку</p>
-          <!-- <form action="">
-                      <input type="email" name="" id="" placeholder="E-mail" />
-                      <input type="submit" value="Подписаться" />
-                  </form> -->
         </div>
       </div>
       <small class="copy">2020 | Developed by GoIT Students</small>
